--- a/src/App.css
+++ b/src/App.css
@@ -37,27 +37,24 @@
   }
 }
 
-body{
-  margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    background-image: linear-gradient(-225deg, #A445B2 0%, #D41872 52%, #FF0066 100%);
-    min-height: 100%;
-    padding-bottom: 5rem;
-
-  
-}
-
-h1,h2{
-  color: white;
+body{ 
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   background-image: linear-gradient(-225deg, #A445B2 0%, #D41872 52%, #FF0066 100%);
   min-height: 100%;
   padding-bottom: 5rem;
+
+  
+}
+
+h1,h2{
+  color: white;
+  padding: 3rem 0;
+  text-align: center;
   text-transform: uppercase;
-  font-weight: 700;
+  font-family: 'Staatliches', cursive;
+  letter-spacing: 1px;
 }
 
 h2{
@@ -80,8 +77,21 @@ h2{
 
 .cita p span {
   font-weight: normal;
+  width: 100%;
+  box-sizing: border-box;
 }
 
+.hola {
+  display: flex;
+    justify-content: center;
+    font-family: 'Staatliches', cursive;
+}
+
+button{
+  width: 100%;
+  box-sizing: border-box;
+
+}
 
 
 
