--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 
-body{ 
+/* body{ 
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -92,7 +92,7 @@ button{
   width: 100%;
   box-sizing: border-box;
 
-}
+} */
 
 
 
